--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,3 @@
-name = "my-aquarium-proxy"
-main = "worker.js"
+name = "my-aquarium"
+pages_build_output_dir = "dist"
 compatibility_date = "2024-01-01"
-
-[env.production]
-vars = { }
